--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Anton&family=Cinzel:wght@400;500;600;700;800;900&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Anton&family=Cinzel:wght@400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 :root {
     --bg-grey:#9b9999;
@@ -114,20 +114,6 @@ html {
 /*---Header & Nav---*/
 
 /*Nav Hovers*/
-.nav-logo:hover{
-    filter: drop-shadow(0 0 0.75rem #fb8600);
-    transition: all 0.5s ease-in;
-}
-
-.nav-link:hover {
-    transform: scale(1.1);
-    transition: all .3s ease-in;
-    border-bottom: 1px solid var(--card-txt-gold);
-}
-
-.nav-link a {
-    color: var(--card-txt-gold);
-}
 
 .cart-toggle:hover {
     transform: scale(1.05);
