--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,8 @@
     margin: 0;
     text-decoration: none;
     list-style: none;
+    -webkit-tap-highlight-color: transparent;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     &::selection {
         background: var(--ft-bg-green);
     }
