--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,8 @@
     --ft-bg-light: #252422d8;
     --ft-bg-green: #4f772d;
     --ft-bg-btn: #e07a5f;
+
+    --bg-products: rgb(26, 24, 24);
 }
 
 
@@ -115,6 +117,19 @@ html {
     }
 }
 
+.fluid-opacity {
+    animation: 1s fluid-opacity;
+}
+
+@keyframes fluid-opacity {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
 
 /*---Hero Section---*/
 
